--- a/milestone1/templates/registration.html
+++ b/milestone1/templates/registration.html
@@ -6,13 +6,12 @@
 
 {% block content %}
 <a href="{{ url_for('auth.home') }}"><i class="fa fa-arrow-left fa-2x abs-float"></i>
-<div><a class="logo" href="/">MyCALC</a></div>
+<a class="logo" href="/">MyCALC</a>
 <div class="main">
     <div class="container">
-        
-        <div class="row justify-content-center">
 
-            <div class="col-md-8">
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
                 {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
                 <div class="container">
@@ -28,40 +27,50 @@
                 <div class="card-group mb-0">
                     <form action="" method="post">
                         {{ form.hidden_tag() }}
-                        
-                        {% for error in form.password.errors %}
-                        <p>{{ error }}</p>
-                        {% endfor %}
-                        <div class="card p-4 login-form">
+                        <div class="card p-4 login-form-register">
                             <div class="card-body">
-                                <h1>Login</h1>
-                                <p class="text-muted">Sign In to your account</p>
+                                <h1>Register</h1>
+                                <p class="text-muted">Create your account</p>
                                 <div class="input-group mb-3">
-
                                     <span class="input-group-addon"><i class="fa fa-user"></i></span>
-                                    {{ form.email(placeholder="email/username",
+                                    {{ form.username(placeholder="Username",
+                                    class="form-control") }}
+                                </div>
+                                {% for error in form.username.errors %}
+                                <p class="text-danger">{{ error }}</p>
+                                {% endfor %}
+                                <div class="input-group mb-3">
+                                    <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
+                                    {{ form.email(placeholder="Email",
                                     class="form-control") }}
                                     
                                 </div>
                                 {% for error in form.email.errors %}
                                 <p class="text-danger">{{ error }}</p>
                                 {% endfor %}
+                                <div class="input-group mb-3">
+                                    <span class="input-group-addon"><i class="fa fa-lock"></i></span>
+                                    {{ form.password1(placeholder="Password",
+                                    class="form-control") }}
+                                </div>
+                                {% for error in form.password1.errors %}
+                                <p class="text-danger">{{ error }}</p>
+                                {% endfor %}
                                 <div class="input-group mb-4">
                                     <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-                                    {{ form.password(placeholder="Password",
+                                    {{ form.password2(placeholder="Confirm Password",
                                     class="form-control") }}
-                                    
                                 </div>
-                                {% for error in form.password.errors %}
+                                {% for error in form.password2.errors %}
                                 <p class="text-danger">{{ error }}</p>
                                 {% endfor %}
                                 <div class="row">
                                     <div class="col-6">
-                                        {{ form.submit(class="btn btn-primary px-4") }}
-                                        
+                                        {{ form.submit(
+                                          class="btn btn-primary") }}
                                     </div>
-                                    <div class="col-6 text-right">
-                                        <button type="button" class="btn btn-link px-0">Forgot password?</button>
+                                    <div class="col-6 text-center">
+                                        <button type="button" class="btn btn-link" > </button>
                                     </div>
                                 </div>
                             </div>
@@ -70,9 +79,9 @@
                     <div class="card text-white bg-primary py-5 d-md-down-none" style="width:44%">
                         <div class="card-body text-center">
                             <div>
-                                <h2>First time here</h2>
-                                <p>Please register now, to explore features</p>
-                                <a class="btn btn-primary active mt-3" href="{{ url_for('auth.register') }}">Register Now!</a>
+                                <h2>Already have an account</h2>
+                                <a class="btn btn-primary active mt-3" href="{{ url_for('auth.login') }}">Click Here</a>
+
                             </div>
                         </div>
                     </div>
@@ -88,6 +97,5 @@
             el.style.display = 'none';
         });
 
-    }, 2000);</script>
-    
+    }, 3000);</script>
 {% endblock %}
