--- a/sample_app/templates/my_calc.html
+++ b/sample_app/templates/my_calc.html
@@ -21,7 +21,8 @@
                 </div>
             </div>
             <div class="row row-cols-3 calc g-1">
-                {% set buttons = ["0","1","2","3","4","5","6","7","8","9","+","-","x","/", "=", "clear"] %}
+                {% set buttons = ["0","1","2","3","4","5","6","7","8","9","+","-","x","/", "Square Root","SQUARE","Standard Deviation","Z-Score
+","P Value ","MEAN","MEDIAN","MODE","VARIANCE", "=", "clear"] %}
                 {% for i in buttons: %}
                 <div class="col p-1">
                     <div class="d-grid">
