--- a/sample_app/templates/layout.html
+++ b/sample_app/templates/layout.html
@@ -40,7 +40,7 @@
 <div class="container-fluid" id="content">{% block content %}{% endblock %}</div>
 <div id="footer">
     {% block footer %}
-    &copy; Copyright 2022.
+    &copy; Prithvi Raj Goravi Dattathreya UCID- pg79.
     {% endblock %}
 </div>
 </body>
