--- a/finalproject/templates/base.html
+++ b/finalproject/templates/base.html
@@ -101,13 +101,13 @@
                            <a href="">
                            <i class="fa fa-phone" aria-hidden="true"></i>
                            <span>
-                           Call 0000000000
+                           Call (973)705-5706
                            </span>
                            </a>
                            <a href="">
                            <i class="fa fa-envelope" aria-hidden="true"></i>
                            <span>
-                           abc@gmail.com
+                           IS601-004@gmail.com
                            </span>
                            </a>
                         </div>
@@ -152,7 +152,7 @@
                <div class="footer-info">
                   <div class="col-lg-7 mx-auto px-0">
                      <p>
-                        &copy; <span id="displayYear"></span> All Rights Reserved
+                        &copy; <span id="displayYear"></span> UCID:- pg79
                      </p>
                   </div>
                </div>
