Adding submission files

--- a/finalproject/templates/index.html
+++ b/finalproject/templates/index.html
@@ -123,7 +123,7 @@
                  <option value="2">Caps</option>
                  <option value="3">Computers</option>
                </select> 
-               
+               UCID;- pg79
                <script type="text/javascript">
                  function handleSelect(elm)
                  {
@@ -311,4 +311,3 @@
     
      
 {%endblock%}
-    
